completes ProductsController, removes unused imports, various fixes